--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,10 @@
 ; the tests create python 2 venvs for Odoo 8, 9, 10
 envlist = 
   py35
+  py36
 
 [testenv]
+skip_missing_interpreters = True
 commands = pytest --verbose --flake8 {posargs}
 deps = 
   pytest 
