Improve/fix tox.ini
For some reason pytest --flake8 does not work.
So we run flake8 standalone.
And we run the README checker too.

--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,28 @@
 envlist = 
   py35
   py36
+  flake8
+  check_readme
 
 [testenv]
 skip_missing_interpreters = True
-commands = pytest --verbose --flake8 {posargs}
+commands = pytest --verbose {posargs}
 deps = 
   pytest 
-  pytest-flake8 
   virtualenv
 passenv = ODOO_AUTODISCOVER_PRESET_VENV
+
+[testenv:flake8]
+skip_install=True
+deps=
+    flake8
+    mccabe
+commands =
+    flake8 .
+
+[testenv:check_readme]
+skip_install=True
+deps=
+    readme_renderer
+commands=
+    python setup.py check -r -s
